# Luddite-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  uncrustify.cfg
Apps/: CMakeLists.txt
Apps/Editor/: CMakeLists.txt
Apps/Editor/src/Editor/: App.cpp  GameInstance.cpp  GameInstance.hpp  RCCppLogger.cpp  RCCppLogger.hpp  SystemTable.h  pch.hpp
Apps/Editor/src/Editor/ECS/Components/: Components.hpp  SelectedEntity.hpp
Apps/Editor/src/Editor/Layers/: EditorLayer.cpp  EditorLayer.hpp
Apps/Editor/src/Editor/Panels/: Panel.hpp  Viewport.hpp
Apps/TestApp/: CMakeLists.txt
Apps/TestApp/src/: App.cpp  AppLayer.cpp  AppLayer.hpp  Components.hpp
Assets/: cubemap.dds  suzanne.mtl
Assets/Shaders/: BasicPBR.vsh  Luddite.hlsl  ambient_light_glsl.psh  cube.psh  cube.vsh  quad_inst.vsh
Assets/Shaders/Deffered/: AmbientPBR.psh  BasicMesh.psh  BasicMesh.vsh  PointLightPBR.psh  WholeScreen.vsh
Assets/Shaders/Deffered/Debug/: ViewColor.psh  ViewDepth.psh  ViewNormal.psh  ViewWorldPos.psh
Assets/Shaders/ForwardPlus/: Common.hlsl
Assets/Shaders/VTFS/: Arguments.hlsl  AssignLightsToClusters.hlsl  AssignLightsToClustersBruteForce.hlsl  BasicMesh.psh  BasicMesh.vsh  BasicMeshClusterSamples.psh  BasicMeshOpaqueDepth.psh  BasicMeshOpaqueLighting.psh  BasicMeshPosOnly.vsh  BuildLightBVH.hlsl  Common.hlsl  ComputeClusterAABBs.hlsl  ComputeLightMortonCodes.hlsl  FindUniqueClusters.hlsl  Functions.hlsl  GridFrustums.hlsl  MergeSort.hlsl  PBR.hlsl  RadixSort.hlsl  ReduceLightsAABB.hlsl  Structs.hlsl  UpdateIndirectArgumentBuffers.hlsl  UpdateLights.hlsl  WholeScreen.vsh
Assets/Shaders/VTFS/Debug/: Heatmap.psh  ViewDepth.psh
src/Luddite/: Application.cpp  Application.hpp  AssetLibrary.hpp  BasicAllocator.hpp  Core.hpp  EntryPoint.cpp  LayerStack.cpp  LayerStack.hpp  Logging.cpp  Logging.hpp  Luddite.hpp  Primitives.hpp  pch.hpp
src/Luddite/Core/: Application.cpp  Application.hpp  Asset.hpp  AssetLibrary.hpp  Assets.cpp  Assets.hpp  BasicAllocator.hpp  Core.hpp  DebugTools.hpp  EntryPoint.hpp  Event.hpp  EventPool.cpp  EventPool.hpp  GameInstance.hpp  LayerStack.cpp  LayerStack.hpp  Logging.cpp  Logging.hpp  MetaInfo.hpp  Primitives.hpp  Profiler.cpp  Profiler.hpp  Queue.hpp  RingBuffer.hpp  pch.cpp  pch.hpp
src/Luddite/Core/AssetTypes/: Material.cpp  Material.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Luddite/Debug/: Timer.hpp
src/Luddite/ECS/: Entity.hpp  Group.hpp  Reflection.cpp  Reflection.hpp  System.hpp  World.cpp  World.hpp
src/Luddite/ECS/Components/: ActiveCamera.hpp  Camera.hpp  Collider.hpp  CollisionShape.hpp  Components.hpp  Lights.hpp  Model.hpp  MotionState.hpp  Name.hpp  NativeScript.hpp  PhysicsWorld.hpp  RigidBody.hpp  Transform.hpp
src/Luddite/ECS/Modules/: Box2D.cpp  Box2D.hpp  Editor.hpp  Graphics.hpp  Input.hpp  LudditeBase.hpp  Models.hpp  Physics.hpp  Transform3D.hpp
src/Luddite/ECS/Scripting/: NativeScript.hpp
src/Luddite/ECS/Systems/: MotionStates.cpp  MotionStates.hpp  Physics.cpp  Physics.hpp  Render.hpp  RenderActiveCamera.hpp  RenderCamera.hpp  SceneSubmitter.hpp  Scripts.cpp  Scripts.hpp  Systems.hpp
src/Luddite/Graphics/: Camera.hpp  Color.cpp  Color.hpp  Cubemap.hpp  DefferedLightingPipelineState.cpp  DefferedLightingPipelineState.hpp  DefferedPipelineState.cpp  DefferedPipelineState.hpp  DefferedRenderer.cpp  DefferedRenderer.hpp  DefferedScreenSpacePipelineState.cpp  DefferedScreenSpacePipelineState.hpp  DiligentInclude.hpp  Diligentpch.cpp  ForwardPlusRenderer.hpp  HybridRenderer.hpp  Lights.hpp  Material.hpp  MaterialDescription.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  Model.hpp  ModelLibrary.cpp  ModelLibrary.hpp  ModelLoader.cpp  PBRMaterial.hpp  PBRRenderer.cpp  PBRRenderer.hpp  QuadBatchRenderer.cpp  QuadBatchRenderer.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTargetBackup.cpp.backup  Renderer.cpp  Renderer.hpp  ShaderAttributeList.cpp  ShaderAttributeList.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp  StreamingBuffer.hpp  (+6 more)
src/Luddite/Layers/: EditorLayer.cpp  EditorLayer.hpp
src/Luddite/Layers/Editor/: ComponentsPanel.cpp  ComponentsPanel.hpp  HeirarchyPanel.cpp  HeirarchyPanel.hpp  Panel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
src/Luddite/Platform/: DiligentPlatform.hpp
src/Luddite/Platform/Compatibility/: Windows.cpp  Windows.hpp
src/Luddite/Platform/IO/: GLFWIO.hpp  IO.hpp  NativeIO.hpp  XCBIO.hpp
src/Luddite/Platform/Window/: D3D12Window.cpp  D3D12Window.hpp  GLFWWindow.cpp  GLFWWindow.hpp  GLXWindow.cpp  GLXWindow.hpp  NativeWindow.hpp  Window.cpp  Window.hpp  WindowsWindow.cpp  WindowsWindow.hpp  XCBWindow.cpp  XCBWindow.hpp
src/Luddite/Rendering/: Color.cpp  Color.hpp  Material.hpp  QuadBatchRenderer.cpp  QuadBatchRenderer.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/Luddite/Utilities/: ImportModelECS.cpp  ImportModelECS.hpp  YamlParsers.cpp  YamlParsers.hpp
